[Style/navbar] Fixed alignment issues

--- a/src/css/windi.css
+++ b/src/css/windi.css
@@ -74,8 +74,8 @@
     padding-right: 6rem;
 }
 .py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
 }
 .pr-2 {
     padding-right: 0.5rem;
